<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="btn_names">Enter names</string>
    <string name="btn_game">Play game</string>
    <string name="btn_standings">Standings</string>
    <string name="high_scores">High Scores</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_save">Save name</string>
    <string name="X">X</string>
    <string name="O">O</string>
    <string name="img_desc">repeating x\'s and o\'s</string>
    <string name="name_hint">Enter player name</string>
    <string name="btn_reset_scores">Reset scores</string>
    <string name="btn_delete_users">Delete users</string>
    <string name="reset">Reset</string>
    <string name="draw">DRAW</string>
    <string name="winner">"WINNER: "</string>
    <string name="hard_mode_switch">Hard mode</string>
    <string name="time_limit">Time limit (s): </string>
    <string name="settings">Settings</string>
    <string name="begin">Begin!</string>
    <string name="select_players">"Select players 1 and 2."</string>
    <string-array name="times">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>