<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/img_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />
    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_background"
        android:text="@string/settings"
        android:textColor="#000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />
    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reset_scores"
        android:layout_width="220dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#283593"
        android:text="@string/btn_reset_scores"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time_limit_text"
        app:layout_constraintTop_toBottomOf="@+id/time_limit_spinner"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_delete_users"
        android:layout_width="220dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#C62828"
        android:text="@string/btn_delete_users"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_reset_scores"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_scores"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/ai_mode_switch"
        android:layout_width="220dp"
        android:layout_height="72dp"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:text="@string/hard_mode_switch"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Spinner
        android:id="@+id/time_limit_spinner"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:entries="@array/times"
        app:layout_constraintStart_toEndOf="@+id/time_limit_text"
        app:layout_constraintTop_toBottomOf="@+id/ai_mode_switch" />

    <TextView
        android:id="@+id/time_limit_text"
        android:layout_width="140dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:text="@string/time_limit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ai_mode_switch"
        app:layout_constraintTop_toBottomOf="@+id/ai_mode_switch"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>